Localization for ratings and resistances

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,8 +2,8 @@
    "LOCAL": {
       "X%OverkillDamage.label": "X% Overkill Damage",
       "abilities.label": "Abilities",
-      "accuracy.baseValue.label": "Base Accuracy = (Mind + Training in Ranged Weapons) / 2, rounded up.",
-      "accuracy.desc.label": "<p><strong>Accuracy</strong> measures your effectiveness with ranged attacks, and affects the <strong>Difficulty</strong> of ranged attacks you make.</p> <p>Your <strong>Accuracy</strong> is equal to <strong>1/2</strong> your <strong>Mind</strong> <strong>+</strong> <strong>Training</strong> in <strong>Ranged Weapons</strong>.</p>",
+      "accuracy.baseValue.label": "<strong>Accuracy</strong> = <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in <strong>Ranged Weapons</strong>, rounded up.",
+      "accuracy.desc.label": "<p><strong>Accuracy</strong> measures your effectiveness with ranged attacks, and affects the <strong>Difficulty</strong> of ranged attacks you make.</p> <p>Your <strong>Accuracy</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in <strong>Ranged Weapons</strong>, rounded up.</p>",
       "accuracy.label": "Accuracy",
       "accuracy.value.label": "Total Accuracy Rating",
       "action.label": "Action",
@@ -83,8 +83,8 @@
       "attributeCheck.label": "Attribute Check",
       "attributeCheckNoLongerValid.label": "Attribute Check no longer valid.",
       "autoCalculateDC.label": "Auto-Calculate DC",
-      "awareness.baseValue.label": "Base Awareness = (Mind + Training in Perception) / 2, rounded up.",
-      "awareness.desc.label": "<p><strong>Awareness</strong> is your passive alertness and attention to detail.</p> <p>Your <strong>Awareness</strong> is equal to <strong>1/2</strong> your <strong>Mind</strong> <strong>+</strong> your <strong>Training</strong> in <strong>Perception</strong>.</p>",
+      "awareness.baseValue.label": "<strong>Awareness</strong> = <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in <strong>Perception</strong>, rounded up.",
+      "awareness.desc.label": "<p><strong>Awareness</strong> is your passive alertness and attention to detail.</p> <p>Your <strong>Awareness</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in <strong>Perception</strong>, rounded up.</p>",
       "awareness.label": "Awareness",
       "awareness.value.label": "Total Awareness Rating",
       "base.label": "Base",
@@ -183,8 +183,8 @@
       "defaultShieldSheet.label": "Default Shield Sheet",
       "defaultSpellSheet.label": "Default Spell Sheet",
       "defaultWeaponSheet.label": "Default Weapon Sheet",
-      "defense.baseValue.label": "Base Defense = (Body + Training in Dexterity) / 2, rounded up.",
-      "defense.desc.label": "<p><strong>Defense</strong> is your ability to defend against attacks, and affects the <strong>Difficulty</strong> of attacks made against you.</p> <p>Your <strong>Defense</strong> is equal to <strong>1/2</strong> your <strong>Body</strong> <strong>+</strong> <strong>Training</strong> in <strong>Dexterity</strong>.</p>",
+      "defense.baseValue.label": "<strong>Defense</strong> = <strong>1 / 2</strong> of your combined <strong>Body</strong> and <strong>Training</strong> in <strong>Dexterity</strong>, rounded up.",
+      "defense.desc.label": "<p><strong>Defense</strong> is your ability to defend against attacks, and affects the <strong>Difficulty</strong> of attacks made against you.</p> <p>Your <strong>Defense</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Body</strong> and <strong>Training</strong> in <strong>Dexterity</strong>, rounded up.</p>",
       "defense.label": "Defense",
       "defense.value.label": "Total Defense Rating",
       "deleteItem.label": "Delete Item",
@@ -283,8 +283,8 @@
       "ineffective.label": "Ineffective",
       "inflictCondition.label": "Inflict Conditions",
       "initialValue.label": "Initial Value",
-      "initiative.baseValue.label": "Base Initiative = (Mind + Training in Perception & Dexterity) / 2, rounded up.",
-      "initiative.desc.label": "<p><strong>Initiative</strong> is your general readiness, and determines your turn order in combat.</p><p><strong>Initiative</strong> is affected by your <strong>Mind</strong> and your <strong>Training</strong> in <strong>Perception</strong>.</p>",
+      "initiative.baseValue.label": "<strong>Initiative</strong> = <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Perception</strong> and <strong>Dexterity</strong>, rounded up.",
+      "initiative.desc.label": "<p><strong>Initiative</strong> is your general readiness, and determines your turn order in combat.</p><p><strong>Initiative</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Perception</strong> and <strong>Dexterity</strong>, rounded up.</p>",
       "initiative.label": "Initiative",
       "initiative.value.label": "Total Initiative Rating",
       "inspiration.desc.label": "<p><strong>Inspiration</strong> is given as a reward for role-play.</p><p>You can spend your <strong>Inspiration</strong> to:</p><ul><li><p>Gain <strong>Advantage</strong> on a Check</p></li><li><p>Recover from <strong>Dying</strong> at the start of your turn</p></li><li><p>Immediately regain 1 <strong>Resolve</strong></p></li></ul>",
@@ -321,8 +321,8 @@
       "medicine.desc.label": "<p><strong>Medicine</strong> is your ability to patch up wounds and treat diseases and poisons.</p>",
       "medicine.label": "Medicine",
       "medium.label": "Medium",
-      "melee.baseValue.label": "Base Melee = (Body + Training in Melee Weapons) / 2, rounded up.",
-      "melee.desc.label": "<p><strong>Melee</strong> measures your effectiveness with close-range attacks, and affects the <strong>Difficulty</strong> of melee attacks you make.</p> <p>Your <strong>Melee</strong> is equal to <strong>1/2</strong> your <strong>Body</strong> <strong>+</strong> <strong>Training</strong> in <strong>Melee Weapons</strong>.</p>",
+      "melee.baseValue.label": "<strong>Melee</strong> = <strong>1 / 2</strong> of your combined <strong>Body</strong> and <strong>Training</strong> in <strong>Melee Weapons</strong>, rounded up., rounded up.",
+      "melee.desc.label": "<p><strong>Melee</strong> measures your effectiveness with close-range attacks, and affects the <strong>Difficulty</strong> of melee attacks you make.</p> <p>Your <strong>Melee</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Body</strong> and <strong>Training</strong> in <strong>Melee Weapons</strong>, rounded up.</p>",
       "melee.label": "Melee",
       "melee.value.label": "Total Melee Rating",
       "meleeWeapons.desc.label": "<p><strong>Melee Weapons</strong> measures your proficiency with close-range weapons.</p>",
@@ -388,8 +388,8 @@
       "reRollFailures.label": "Re-roll Failures",
       "reRollFailuresSpendResolve.label": "Re-roll Failures (Spend 1 Resolve)",
       "reaction.label": "Reaction",
-      "reflexes.baseValue.label": "Base Reflexes = Mind + (Body / 2), rounded down.",
-      "reflexes.desc.label": "<p><strong>Reflexes</strong> is your ability to duck, dodge, and avoid sudden danger.</p><p><strong>Reflexes</strong> are greatly affected by your <strong>Mind</strong> and slightly affected by your <strong>Body</strong>.</p>",
+      "reflexes.baseValue.label": "<strong>Reflexes</strong> = your <strong>Mind</strong> + <strong>1 / 2</strong> of your <strong>Body</strong>, rounded down.",
+      "reflexes.desc.label": "<p><strong>Reflexes</strong> is your ability to duck, dodge, and avoid sudden danger.</p><p>Your <strong>Reflexes</strong> are equal to your <strong>Mind</strong> + <strong>1 / 2</strong> of your <strong>Body</strong>, rounded down.</p>",
       "reflexes.label": "Reflexes",
       "reflexes.value.label": "Total Reflexes",
       "regainX%Resolve.label": "Regain X% Resolve",
@@ -410,8 +410,8 @@
       "repair.label": "Repair",
       "repairArmor.label": "Repair Armor",
       "repairedX%Armor.label": "Repaired X% Armor",
-      "resilience.baseValue.label": "Base Resilience = Body + (Soul / 2), rounded down.",
-      "resilience.desc.label": "<p><strong>Resilience</strong> is your ability to endure pain and resist illnesses.</p><p><strong>Resilience</strong> is greatly affected by your <strong>Body</strong> and slightly affected by your <strong>Soul</strong>.</p>",
+      "resilience.baseValue.label": "<strong>Resilience</strong> = your <strong>Body</strong> + <strong>1 / 2</strong> of your <strong>Soul</strong>, rounded down.",
+      "resilience.desc.label": "<p><strong>Resilience</strong> is your ability to endure pain and resist illnesses.</p><p>Your <strong>Resilience</strong> is equal to your <strong>Body</strong> + <strong>1 / 2</strong> of your <strong>Soul</strong>, rounded down.</p>",
       "resilience.label": "Resilience",
       "resilience.value.label": "Total Resilience",
       "resistance.label": "Resistance",
@@ -538,8 +538,8 @@
       "weaponAttacks.label": "Weapon Attacks",
       "weaponDescription.label": "Weapon Description",
       "weapons.label": "Weapons",
-      "willpower.baseValue.label": "Base Willpower = Soul + (Mind / 2), rounded down.",
-      "willpower.desc.label": "<p><strong>Willpower</strong> is your ability to resist mental attacks.</p><p><strong>Willpower</strong> is greatly affected by your <strong>Soul</strong> and slightly affected by your <strong>Mind</strong></p>",
+      "willpower.baseValue.label": "<strong>Willpower</strong> = your <strong>Soul</strong> + <strong>1 / 2</strong> of your <strong>Mind</strong>, rounded down.",
+      "willpower.desc.label": "<p><strong>Willpower</strong> is your ability to resist mental attacks.</p><p>Your <strong>Willpower</strong> is equal to your <strong>Soul</strong> + <strong>1 / 2</strong> of your <strong>Mind</strong>, rounded down.</p>",
       "willpower.label": "Willpower",
       "willpower.value.label": "Total Willpower",
       "woundRegain.label": "Wound Regain",
