Finished updating character sheet ratings.

--- a/lang/en.json
+++ b/lang/en.json
@@ -283,8 +283,8 @@
       "ineffective.label": "Ineffective",
       "inflictCondition.label": "Inflict Conditions",
       "initialValue.label": "Initial Value",
-      "initiative.baseValue.label": "<strong>Initiative</strong> = <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Perception</strong> and <strong>Dexterity</strong>, rounded up.",
-      "initiative.desc.label": "<p><strong>Initiative</strong> is your general readiness, and determines your turn order in combat.</p><p><strong>Initiative</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Perception</strong> and <strong>Dexterity</strong>, rounded up.</p>",
+      "initiative.baseValue.label": "<strong>Initiative</strong> = <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Dexterity</strong> and <strong>Perception</strong>, rounded up.",
+      "initiative.desc.label": "<p><strong>Initiative</strong> is your general readiness, and determines your turn order in combat.</p><p><strong>Initiative</strong> is equal to <strong>1 / 2</strong> of your combined <strong>Mind</strong> and <strong>Training</strong> in both <strong>Dexterity</strong> and <strong>Perception</strong>, rounded up.</p>",
       "initiative.label": "Initiative",
       "initiative.value.label": "Total Initiative Rating",
       "inspiration.desc.label": "<p><strong>Inspiration</strong> is given as a reward for role-play.</p><p>You can spend your <strong>Inspiration</strong> to:</p><ul><li><p>Gain <strong>Advantage</strong> on a Check</p></li><li><p>Recover from <strong>Dying</strong> at the start of your turn</p></li><li><p>Immediately regain 1 <strong>Resolve</strong></p></li></ul>",
