Fixed meters and image pickers

--- a/lang/en.json
+++ b/lang/en.json
@@ -153,7 +153,8 @@
       "customShieldTrait.label": "Custom Shield Trait",
       "customTrait.label": "Custom Trait",
       "customWeaponTrait.label": "Custom Weapon Trait",
-      "damage.desc.label": "<p>Bonuses and penalties to damage dealt.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
+      "damage.base.label": "Determined by what gear, effects, and abilities you possess.",
+      "damage.desc.label": "<p>Bonuses and penalties to the <strong>Damage</strong> you deal.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
       "damage.label": "Damage",
       "damageMod.label": "Damage Mod",
       "damageReducedBy.label": "Damage Reduced By",
@@ -262,7 +263,8 @@
       "healX%Damage.label": "Heal X% Damage",
       "restoredX%Stamina.label": "Restored X% Stamina",
       "healedX%Wounds.label": "Healed X% Wounds",
-      "healing.desc.label": "<p>Bonuses and penalties to healing performed.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
+      "healing.base.label": "Determined by what gear, effects, and abilities you possess.",
+      "healing.desc.label": "<p>Bonuses and penalties to the <strong>Healing</strong> you perform.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
       "healing.label": "Healing",
       "healingMod.label": "Healing Mod",
       "heavy.armor.label": "Heavy",
