+Refactored character sheet resources

--- a/lang/en.json
+++ b/lang/en.json
@@ -39,7 +39,7 @@
       "applyOverkillDamage.label": "Apply Overkill Damage",
       "arcana.desc.label": "<p><strong>Arcana</strong> measures how much you know about arcane magic and creatures.</p>",
       "arcana.label": "Arcana",
-      "armor.base.label": "Your <strong>Armor</strong> is determined by what gear, effects, and abilities you possess.",
+      "armor.baseValue.label": "Your <strong>Armor</strong> is determined by what gear, effects, and abilities you possess.",
       "armor.desc.label": "<p><strong>Armor</strong> decreases the amount of <strong>Damage</strong> taken when you are hit by attacks and spells.</p><p>Your <strong>Armor</strong> is determined by what gear, effects, and abilities you possess.</p>",
       "armor.encumbering.desc.label": "When wearing armor with the <strong>Encumbering</strong> trait, you have <strong>Disadvantage</strong> on checks to <strong>Swim</strong>, <strong>Fly</strong>, or <strong>Climb</strong>.",
       "armor.heavy.desc.label": "While wearing <strong>Heavy</strong> armor, all your speeds are decreased by <strong>-1</strong>, and you have <strong>Greater Disadvantage</strong> on checks to <strong>Swim</strong>, <strong>Fly</strong>, or <strong>Climb</strong>. You cannot <strong>Jump</strong> while wearing <strong>Heavy</strong> armor.",
@@ -153,7 +153,7 @@
       "customShieldTrait.label": "Custom Shield Trait",
       "customTrait.label": "Custom Trait",
       "customWeaponTrait.label": "Custom Weapon Trait",
-      "damage.base.label": "Determined by what gear, effects, and abilities you possess.",
+      "damage.baseValue.label": "Determined by what gear, effects, and abilities you possess.",
       "damage.desc.label": "<p>Bonuses and penalties to the <strong>Damage</strong> you deal.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
       "damage.label": "Damage",
       "damageMod.label": "Damage Mod",
@@ -263,7 +263,7 @@
       "healX%Damage.label": "Heal X% Damage",
       "restoredX%Stamina.label": "Restored X% Stamina",
       "healedX%Wounds.label": "Healed X% Wounds",
-      "healing.base.label": "Determined by what gear, effects, and abilities you possess.",
+      "healing.baseValue.label": "Determined by what gear, effects, and abilities you possess.",
       "healing.desc.label": "<p>Bonuses and penalties to the <strong>Healing</strong> you perform.</p><p>Determined by what gear, effects, and abilities you possess.</p>",
       "healing.label": "Healing",
       "healingMod.label": "Healing Mod",
@@ -424,9 +424,9 @@
       "resistedX%Damage.label": "Resisted X% Damage",
       "resistedX%Rend.label": "Resisted X% Rend",
       "resistedBy.label": "Resisted by",
-      "resolve.desc.label": "<p><strong>Resolve</strong> is your ability to push yourself beyond your normal limits.</p><p><strong>1 Resolve</strong> is regained at the start of your turn in <strong>Combat</strong>.</p><p>You may spend <strong>Resolve</strong> during <strong>Combat</strong> to:</p><ul><li><p>Perform an extra <strong>Action</strong></p>.</li><li><p>Use an <strong>Ability</strong> that requires <strong>Resolve</strong>.</p></li><li><p>Re-roll failures on a <strong>Check</strong>.</p></li><li><p>Double your <strong>Training</strong> on a check, <strong><em>before</em></strong> the roll is made.</p></li><li><p>Double your <strong>Expertise</strong> on a check, <strong><em>before or after</em></strong> the roll is made.</p></li></ul>",
+      "resolve.desc.label": "<p><strong>Resolve</strong> is your ability to push yourself beyond your normal limits.</p><p><strong>1 Resolve</strong> is regained at the start of your turn in <strong>Combat</strong>.</p><p>You may spend <strong>Resolve</strong> during <strong>Combat</strong> to:</p><ul><li><p>Perform an extra <strong>Action</strong>.</p></li><li><p>Use an <strong>Ability</strong> that requires <strong>Resolve</strong>.</p></li><li><p>Re-roll failures on a <strong>Check</strong>.</p></li><li><p>Double your <strong>Training</strong> on a check, <strong><em>before</em></strong> the roll is made.</p></li><li><p>Double your <strong>Expertise</strong> on a check, <strong><em>before or after</em></strong> the roll is made.</p></li></ul>",
       "resolve.label": "Resolve",
-      "resolve.max.label": "Max Resolve = Soul",
+      "resolve.maxValue.label": "Max Resolve = Soul",
       "resolveCost.label": "Resolve Cost",
       "resolveFullyRestored.label": "Resolve Fully Restored",
       "resolveRegain.label": "Resolve Regained",
@@ -473,7 +473,7 @@
       "splash.label": "Splash",
       "stamina.desc.label": "<p><strong>Stamina</strong> decreases by taking <strong>Damage</strong>.</p><p>When you have no <strong>Stamina</strong> remaining, any <strong>Damage</strong> you take increases your <strong>Wounds</strong>.</p><p>You recover all your <strong>Stamina</strong> when you complete a <strong>Short</strong> or <strong>Long Rest</strong>.</p>",
       "stamina.label": "Stamina",
-      "stamina.max.label": "Max Stamina = (Body + Mind + Soul)",
+      "stamina.maxValue.label": "Max Stamina = (Body + Mind + Soul)",
       "staminaFullyRestored.label": "Stamina Fully Restored",
       "staminaHealed.label": "Stamina Healed",
       "standardAspects.label": "Standard Aspects",
@@ -547,7 +547,7 @@
       "woundRegain.label": "Wound Regain",
       "wounds.desc.label": "<p><strong>Wounds</strong> increase by taking <strong>Damage</strong> is excess of your remaining <strong>Stamina</strong>.</p><p>You start <strong>Dying</strong> when you take damage in excess of your maximum <strong>Wounds</strong> and <strong>Stamina</strong></p><p>Your <strong>Wounds</strong> decrease by <strong>-1</strong> when you complete a <strong>Long Rest</strong>.</p>",
       "wounds.label": "Wounds",
-      "wounds.max.label": "Max Wounds = (Body + Mind + Soul)",
+      "wounds.maxValue.label": "Max Wounds = (Body + Mind + Soul)",
       "woundsTaken.label": "Wounds Taken",
       "xp.label": "XP",
       "xpAvailable.label": "XP Available",
